--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+
+  <!-- BOTÃO FIXO PARA VOLTAR À TELA INICIAL -->
+  <div class="btn-voltar-container">
+    <ion-button class="btn-voltar" routerLink="/home">
+      VOLTAR AO INÍCIO
+    </ion-button>
+  </div>
 </ion-app>
