--- a/src/app/pages/atendente/atendente.page.html
+++ b/src/app/pages/atendente/atendente.page.html
@@ -1,30 +1,49 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Atendente</ion-title>
+    <ion-title>GERÊNCIA DE ATENDIMENTO</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-item>
-    <ion-label position="stacked">Guichê</ion-label>
-    <ion-input type="number" placeholder="Ex.: 1" [formControl]="counterCtrl"></ion-input>
-  </ion-item>
+<ion-content class="at-page">
+  <div class="wrapper">
 
-  <div class="actions">
-    <ion-button expand="block" [disabled]="busy()" (click)="callNext()">Chamar próximo</ion-button>
-    <ion-button expand="block" color="success" [disabled]="busy() || !current()" (click)="finish()">Finalizar</ion-button>
+    <!-- INPUT DO GUICHÊ -->
+    <ion-input
+      class="counter-input"
+      type="number"
+      placeholder="NÚMERO DO GUICHÊ...."
+      [formControl]="counterCtrl">
+    </ion-input>
+
+    <!-- BOTÕES AMARELOS -->
+    <div class="btn-group">
+      <button
+        class="btn-yellow"
+        type="button"
+        (click)="callNext()"
+        [disabled]="busy()">
+        CHAMAR<br>PRÓXIMO
+      </button>
+
+      <button
+        class="btn-yellow"
+        type="button"
+        (click)="finish()"
+        [disabled]="busy() || !current()">
+        FINALIZAR<br>ATENDIMENTO
+      </button>
+
+      <button
+        class="btn-yellow"
+        type="button"
+        (click)="discard()"
+        [disabled]="busy() || !current()">
+        DESCARTAR
+      </button>
+    </div>
+
+    <div class="message" *ngIf="message()">
+      {{ message() }}
+    </div>
   </div>
-
-  <ion-card *ngIf="current() as t">
-    <ion-card-header>
-      <ion-card-title>Em atendimento</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      <div class="code">{{ t.code }}</div>
-      <div>Tipo: {{ t.type }}</div>
-      <div>Status: {{ t.status }}</div>
-    </ion-card-content>
-  </ion-card>
-
-  <div class="hint" *ngIf="message()">{{ message() }}</div>
 </ion-content>
